--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
-    <link rel="stylesheet" href="./public/scrollbar.css" />
+    <link rel="stylesheet" href="/scrollbar.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="my-focus" name="title" />
     <meta content="my-focus, devnamu" name="keywords" />
