--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="my-focus" name="title" />
     <meta content="my-focus, devnamu" name="keywords" />
-    <meta content="해야 될 일을 했는지 추적하는 서비스" name="description" />
+    <meta content="중요한 목표에 집중하세요!" name="description" />
     <meta property="og:title" content="my-focus" />
     <meta property="og:url" content="https://my-focus.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og_thumbnail.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
-    <meta property="og:description" content="해야 될 일을 했는지 추적하는 서비스" />
+    <meta property="og:description" content="중요한 목표에 집중하세요!" />
     <title>my-focus</title>
   </head>
   <body>
