Feat: hierarchy page 생성

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/scrollbar.css" />
+    <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="my-focus" name="title" />
     <meta content="my-focus, devnamu" name="keywords" />
