Fix: smb grid 오류 해결, 이름 바꿈 MyRealFocus

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="MyRealFocus" name="title" />
-    <meta content="MyRealFocus, devnamu" name="keywords" />
+    <meta content="MyRealFocus" name="keywords" />
     <meta content="중요한 목표에 집중하세요!" name="description" />
     <meta property="og:title" content="MyRealFocus" />
     <meta property="og:url" content="https://myrealfocus.site/" />
