--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" href="/scrollbar.css" />
     <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="my-focus" name="title" />
-    <meta content="my-focus, devnamu" name="keywords" />
+    <meta content="MyRealFocus" name="title" />
+    <meta content="MyRealFocus, devnamu" name="keywords" />
     <meta content="중요한 목표에 집중하세요!" name="description" />
-    <meta property="og:title" content="my-focus" />
-    <meta property="og:url" content="https://my-focus.com/" />
+    <meta property="og:title" content="MyRealFocus" />
+    <meta property="og:url" content="https://myrealfocus.site/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og_thumbnail.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     <meta property="og:description" content="중요한 목표에 집중하세요!" />
-    <title>my-focus</title>
+    <title>MyRealFocus</title>
   </head>
   <body>
     <div id="root"></div>
