--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
-<html lang="ko">
+<!-- FIXME: scroll 영역인데도 불구하고 전체 영역의 스크롤로 잡힘. 크롬 버그 같음. -->
+<html lang="ko" class="overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/scrollbar.css" />
     <link rel="stylesheet" href="./index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="MyRealFocus" name="title" />
-    <meta content="MyRealFocus" name="keywords" />
+    <meta content="FocusTree" name="title" />
+    <meta content="FocusTree" name="keywords" />
     <meta content="중요한 목표에 집중하세요!" name="description" />
-    <meta property="og:title" content="MyRealFocus" />
-    <meta property="og:url" content="https://myrealfocus.site/" />
+    <meta property="og:title" content="FocusTree" />
+    <meta property="og:url" content="https://FocusTree.site/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og_thumbnail.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
     <meta property="og:description" content="중요한 목표에 집중하세요!" />
-    <title>MyRealFocus</title>
+    <title>FocusTree</title>
   </head>
   <body>
     <div id="root"></div>
